rough first pass at adding Guest login option. link is fake for now

--- a/global.css
+++ b/global.css
@@ -15,6 +15,10 @@ div.ic-Login__content {
     color: white;
 }
 
+.hu-help-icon {
+    float: right;
+}
+
 .hu-hkey-login {
     border-top: 1px solid black;
     padding-top: 1em;
@@ -26,10 +30,6 @@ div.ic-Login__content {
 
 .hu-hkey-login-link {
     border-bottom: 1px solid black;
-}
-
-.hu-help-icon {
-    float: right;
 }
 
 .hu-hkey-help {
@@ -46,6 +46,29 @@ div.ic-Login__content {
     padding-left: 4px;
     vertical-align: baseline;
 }
+
+.hu-guest-login {
+    border-top: 1px solid black;
+    padding-top: 1em;
+    padding-bottom: .5em;
+    font-weight: bold;
+    color: black;
+    font-size: 1.25em;
+}
+
+.hu-guest-login-link {
+    border-bottom: 1px solid black;
+}
+
+.hu-guest-help {
+    display: none;
+    color: black;
+}
+
+.hu-guest-login a:hover {
+    text-decoration: none;
+}
+
 
 .ic-Login__container footer {
     font-size: .75em;
