improved formatting of HKey / Guest options

--- a/global.css
+++ b/global.css
@@ -20,9 +20,7 @@ div.ic-Login__content {
 }
 
 .hu-hkey-login {
-    border-top: 1px solid black;
-    padding-top: 1em;
-    padding-bottom: .5em;
+    padding-top: .5em;
     font-weight: bold;
     color: black;
     font-size: 1.25em;
@@ -48,8 +46,6 @@ div.ic-Login__content {
 }
 
 .hu-guest-login {
-    border-top: 1px solid black;
-    padding-top: 1em;
     padding-bottom: .5em;
     font-weight: bold;
     color: black;
@@ -69,6 +65,19 @@ div.ic-Login__content {
     text-decoration: none;
 }
 
+.other-logins {
+    border-top: 1px solid black;
+    color: black;
+    font-weight: bold;
+    font-size: 1.25em;
+    padding-top: .5em;
+}
+
+.or {
+    color: black;
+    font-weight: bold;
+    font-size: 1.25em;
+}
 
 .ic-Login__container footer {
     font-size: .75em;
